@@ -31,6 +31,8 @@ MBDyn 1.X-Devel
 		- fixed read check for excessive channel number in fixed
 		  step driver (noted by Davide Ivone)
 		- fixed time-dependent output meter
+		- fixed missing "forever" in double ramp descent final time
+		  (Reinhard Resch)
 
 MBDyn 1.7.1
 	Enhancements:
